welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (stop=false) {
           ^BDRBuggle:4: error: recursive variable n needs type
	n=litMessage(): String
        ^